--- a/section-3/log.html
+++ b/section-3/log.html
@@ -1750,25 +1750,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8762],[],[[4,0,1,0,[],[1,199,8478],[[0,5,6,0,7,8,0,0,[1,199,6806],[],[[200,2,9]]],[0,10,6,0,11,12,0,0,[1,7006,896],[],[[7006,2,13]]],[0,14,6,0,15,16,0,0,[1,7902,155],[],[[7903,2,17]]],[0,14,6,0,15,18,0,0,[1,8057,68],[],[[8058,2,19]]],[0,10,6,0,11,20,0,0,[1,8126,550],[],[[8126,2,21]]]]]],[[1,22,23,0,24,0,0,0,[1,198,1],[],[]],[2,22,23,0,24,25,0,0,[1,8679,83],[[0,25,6,0,26,0,0,0,[1,8679,83],[],[]]],[]]],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11706],[],[[4,0,1,0,[],[1,234,11387],[[0,5,6,0,7,8,0,0,[1,235,6628],[],[[235,2,9]]],[0,10,6,0,11,12,0,0,[1,6864,871],[],[[6864,2,13]]],[0,14,6,0,15,16,0,0,[1,7736,136],[],[[7736,2,17]]],[0,14,6,0,15,18,0,0,[1,7872,68],[],[[7872,2,19]]],[0,10,6,0,11,20,0,0,[1,7940,634],[],[[7940,2,21]]],[0,22,23,0,24,25,0,0,[1,8574,3002],[],[[11575,2,26]]],[0,27,6,0,28,29,0,0,[1,11576,31],[],[[11607,2,30]]],[0,31,6,0,32,33,0,0,[1,11608,12],[],[[11620,2,34]]]]]],[[1,35,23,0,36,0,0,0,[1,234,0],[],[]],[2,35,23,0,36,37,0,0,[1,11621,85],[[0,37,6,0,38,0,0,0,[1,11622,84],[],[]]],[]]],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*My Account","*/Users/lukehowsam/srv/dev/robot-framework-course/section-3/my_account.robot","*my_account.robot","*Login attempt with invalid user should throw error","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"http://demostore.supersqa.com\">http://demostore.supersqa.com\x3c/a>'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${MY_ACCOUNT}","*Clicking element 'xpath=//*[@id=\"site-navigation\"]/div[1]/ul/li[4]/a'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=username, fakeuser","*Typing text 'fakeuser' into text field 'id=username'.","*id=password, fakepassword","*Typing text 'fakepassword' into text field 'id=password'.","*name=login","*Clicking element 'name=login'.","*Run Keywords","*BuiltIn","*<p>Executes all the given keywords in a sequence.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*My Account","*/Users/lukehowsam/srv/dev/robot-framework-course/section-3/my_account.robot","*my_account.robot","*Login attempt with invalid user should throw error","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${URL}, ${BROWSER}","*Opening browser 'chrome' to base url '<a href=\"http://demostore.supersqa.com\">http://demostore.supersqa.com\x3c/a>'.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*${MY_ACCOUNT}","*Clicking element 'xpath=//*[@id=\"site-navigation\"]/div[1]/ul/li[4]/a'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=username, fakeuser","*Typing text 'fakeuser' into text field 'id=username'.","*id=password, fakepassword","*Typing text 'fakepassword' into text field 'id=password'.","*name=login","*Clicking element 'name=login'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*3","*Slept 3 seconds","*Element Should Be Visible","*<p>Verifies that the element identified by <code>locator\x3c/code> is visible.\x3c/p>","*class=woocommerce-error","*Element 'class=woocommerce-error' is displayed.","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*${ERROR_STR}","*Current page contains text 'ERROR: Invalid username. Lost your password?'.","*Run Keywords","*<p>Executes all the given keywords in a sequence.\x3c/p>","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:09","fail":0,"id":"s1","label":"My Account","name":"My Account","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"My Account","name":"My Account","pass":1}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1600886191442;
+window.output["baseMillis"] = 1600886493524;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8774;
+window.output["generated"] = 11717;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
